yaml/ingress/openfaas-figlet-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: openfaas-figlet
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - http:
      paths:
      - path: /figlet
        backend:
          serviceName: openfaas-figlet
          servicePort: http
